# barefun

./: .envrc  .gitignore  Makefile  README.md  build.jenga  compile.sh  disk.image  dune  example.fun  fs.image  minimal.fun  poems.input  run.sh  sample.input  shell.fun  shell.nix  tests.t
bits/: README.md
bits/old-make-x86/: bare.asm
bits/x86/examples/: Makefile  README
bits/x86/examples/src/: gen1.asm  print1.asm  print2.asm  print3.asm
check-compile/: bytes-0.ml  bytes-4.ml  bytes-5.asm  cut-5.asm  dune  evenodd-0.ml  evenodd-1.ml  evenodd-1u.ml  evenodd-2.ml  evenodd-3.ml  evenodd-4.ml  evenodd-5.asm  fib-0.ml  fib-1.ml  fib-1u.ml  fib-2.ml  fib-2u.ml  fib-3.ml  fib-3u.ml  fib-4.ml  fib-5.asm  halts-0.ml  halts-1.ml  halts-1u.ml  halts-2.ml  halts-2u.ml  halts-3.ml  halts-3u.ml  halts-5.asm  hello-0.ml  hello-1.ml  hello-1u.ml  hello-2.ml  hello-3.ml  hello-4.ml  hello-5.asm  oneArm-4.ml  oneArm-5.asm  promptA-5.asm  promptB-5.asm  (+44 more)
check-compile/expected/: small-0.ml  small-1.ml  small-2.ml  small-3.ml  tiny-0.ml  tiny-2.ml
check-compile/generate/: main.ml
check-eval/: cut.t  dune  evenodd.t  fib.t  halts.t  hello.t  prompt.t  put-int.t  shell.input  shell.t  small.t  thrice.t  tiny.t  tree.t
compile-examples/: README.md  dune
compile-examples/expected/: bytes-4.ml  bytes-5.asm  cut-4.ml  cut-5.asm  evenodd-4.ml  evenodd-5.asm  fib-4.ml  fib-5.asm  filesystem-0.ml  filesystem-1.ml  filesystem-2.ml  filesystem-4.ml  filesystem-5.asm  halts-4.ml  halts-5.asm  hello-4.ml  hello-5.asm  oneArm-4.ml  oneArm-5.asm  output-4.ml  output-5.asm  promptA-4.ml  promptA-5.asm  promptB-4.ml  promptB-5.asm  put_int-4.ml  put_int-5.asm  sham-4.ml  sham-5.asm  shammy-4.ml  shammy-5.asm  shell-4.ml  shell-5.asm  small-4.ml  small-5.asm  smaller-4.ml  thrice-4.ml  thrice-5.asm  tiny-1.ml  tiny-4.ml  (+3 more)
compile-examples/generate/: main.ml
doc/: README.md  dev.plan
examples/: README.md  assert.fun  bytes.fun  cons_app.fun  crash.fun  cut.fun  detect_comptime.fun  dune  echo.fun  evenodd.fun  ff.fun  fib.fun  fib.t  filesystem.fun  halts.fun  halts.t  hello.fun  if_seq.fun  norm.fun  num_to_char.fun  oneArm.fun  peval.fun  print_all_chars.fun  promptA.fun  promptB.fun  put_int.fun  sham.fun  shammy.fun  shell.fun  shell.input  shell.t  small.fun  small.t  thrice.fun  tiny.fun  tiny.t  tree.fun  two.fun  unroll.fun
haskell/: README.md  dune  example.fun  package.yaml
haskell/src/: Builtin.hs  CommandLine.hs  Eval0.hs  Eval1.hs  Exp0.hs  Exp1.hs  Interaction.hs  Lines.hs  Normalize.hs  Par4.hs  Parser.hs  Predefined.hs  Primitive.hs  Stage0.hs  Stage0_AST.hs  Stage1.hs  Stage1_EXP.hs  Stage2.hs  Stage2_NBE.hs  Stage3.hs  Stage3_ANF.hs  Stage4_CCF.hs  Stage5_ASM.hs  Stage5_ASM_AbstractSyntax.hs  Stage5_ASM_Compiler.hs  Stage5_ASM_Emulation.hs  Stage5_Compilation.hs  Stage5_Emulation.hs  Top.hs  Transform1.hs  Transform2.hs  Value.hs  build.jenga
images/: dune
images/generate/: main.ml
nix/: src.json
ocaml/: README.md  dune  example.fun  main.ml
ocaml/example_lib/: dune
ocaml/example_lib/generate/: main.ml
ocaml/generate/: main.ml
ocaml/lib/: dune  entry.ml  prim.ml  repl.ml
ocaml/prim_lib/: dune  prim.ml
src/: kernel.asm  quarter.f
test/: README.md
test-evaluation/: README.md  bytes.t  cut.t  dune  evenodd.t  fib.t  filesystem.t  halts.t  hello.t  oneArm.t  prompt.t  promptA.t  promptB.t  put-int.t  sham.input  sham.t  shammy.t  shell.input  shell.t  small.t  smaller.t  thrice.t  tiny.t  tree.t
test-evaluation/input/: promptB.input  shammy.input
test/compile-examples/: README.md
test/compile-examples/generate/: main.ml
test/eval-same/: README.md  dune
test/eval-same/generate/: main.ml
test/evaluation/: README.md  bytes.t  codes.t  detect_comptime.t  dune  evenodd.t  fib.t  filesystem.t  fs-short.t  hello.t  keycode.t  norm.t  peval.t  promptA.t  promptB.t  put-int.t  read3.t  readline.t  sham.t  shammy.t  shell.t  small.t  smaller.t  thrice.t  tiny.t  tree.t  unroll.t
test/evaluation/input/: sham.input
test/examples/: README.md  arith.fun  bytes.fun  codes.fun  echo.fun  empty.fun  ff.fun  filesystem.fun  hello.fun  keycode.fun  more.fun  print_all_chars.fun  promptA.fun  promptB.fun  read3.fun  readline.fun  scan.fun  secex.fun  sex.fun  sham.fun  smaller.fun  tree.fun  v1_filesystem.fun
test/expected/: bytes-5.asm  codes-2.ml  codes-3.ml  codes-4.ml  codes-5.asm  detect_comptime-2.ml  echo-5.asm  empty-4.ml  empty-5.asm  evenodd-5.asm  ff-5.asm  fib-5.asm  filesystem-0.ml  filesystem-1.ml  filesystem-3.ml  filesystem-4.ml  filesystem-5.asm  hello-0.ml  hello-1.ml  hello-2.ml  hello-3.ml  hello-4.ml  hello-5.asm  keycode-4.ml  keycode-5.asm  norm-5.asm  peval-0.ml  peval-1.ml  peval-2.ml  peval-3.ml  peval-4.ml  peval-5.asm  print_all_chars-4.ml  print_all_chars-5.asm  promptA-5.asm  promptB-4.ml  promptB-5.asm  put_int-5.asm  read3-0.ml  read3-1.ml  (+44 more)
test/images/generate/: main.ml
test/inputs/: filesystem.input  fs.short-input  keycode.input  readline.input  sham.input  small.input
test/same-evaluation-from-all-stages/: README.md  dune
test/same-evaluation-from-all-stages/generate/: main.ml
x86/: Makefile  bare.asm  epilog.asm  fs.image  runtime.asm
x86/bits/: dune  try.asm
x86/examples/: Makefile
x86/examples/src/: cursor.asm  gen1.asm  repl.asm
x86/repl/: Makefile  README
x86/src/: bootloader.asm  kernel.asm
