
(rule
 (alias small)
 (deps (universe) images/small.img)
 (action
  (progn
   (run chmod +w images/small.img)
   (run qemu-system-i386 -hda images/small.img))))

;(rule
; (alias bytes)
; (deps (universe) images/bytes.img)
; (action
;  (progn
;   (run chmod +w images/bytes.img)
;   (run qemu-system-i386 -hda images/bytes.img))))

(subdir images

 (rule
  (deps ../x86/runtime.asm ../compile-examples/gen/small-5.gen)
  (action
   (with-stdout-to small.img
    (run nasm -Werror -o small.img -dCODE='../compile-examples/gen/small-5.gen' ../x86/runtime.asm))))

; (rule
;  (deps ../x86/runtime.asm ../compile-examples/gen/bytes-5.gen)
;  (action
;   (with-stdout-to bytes.img
;    (run nasm -Werror -o bytes.img -dCODE='../compile-examples/gen/bytes-5.gen' ../x86/runtime.asm))))

)