
(rule (alias runtest) (action (diff expected/tiny-0.ml tiny-0.ml)))
(rule (alias runtest) (action (diff expected/tiny-1.ml tiny-1.ml)))
(rule (alias runtest) (action (diff expected/tiny-2.ml tiny-2.ml)))
(rule (alias runtest) (action (diff expected/tiny-3.ml tiny-3.ml)))

(rule (alias runtest) (action (diff expected/small-0.ml small-0.ml)))
(rule (alias runtest) (action (diff expected/small-1.ml small-1.ml)))
(rule (alias runtest) (action (diff expected/small-2.ml small-2.ml)))
(rule (alias runtest) (action (diff expected/small-3.ml small-3.ml)))

(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-0.ml (run ../haskell/main.exe ../examples/tiny.fun -compile -0))))
(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-1.ml (run ../haskell/main.exe ../examples/tiny.fun -compile -1))))
(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-2.ml (run ../haskell/main.exe ../examples/tiny.fun -compile -2))))
(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-3.ml (run ../haskell/main.exe ../examples/tiny.fun -compile -3))))

(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-0.ml (run ../haskell/main.exe ../examples/small.fun -compile -0))))
(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-1.ml (run ../haskell/main.exe ../examples/small.fun -compile -1))))
(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-2.ml (run ../haskell/main.exe ../examples/small.fun -compile -2))))
(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-3.ml (run ../haskell/main.exe ../examples/small.fun -compile -3))))
