
;; normalized compilation output 0,1,2,3

(rule (alias runtest) (action (diff tiny-0.ml tiny-0.gen)))
(rule (alias runtest) (action (diff tiny-1.ml tiny-1.gen)))
(rule (alias runtest) (action (diff tiny-2.ml tiny-2.gen)))
(rule (alias runtest) (action (diff tiny-3.ml tiny-3.gen)))

(rule (alias runtest) (action (diff small-0.ml small-0.gen)))
(rule (alias runtest) (action (diff small-1.ml small-1.gen)))
(rule (alias runtest) (action (diff small-2.ml small-2.gen)))
(rule (alias runtest) (action (diff small-3.ml small-3.gen)))

(rule (alias runtest) (action (diff halts-0.ml halts-0.gen)))
(rule (alias runtest) (action (diff halts-1.ml halts-1.gen)))
(rule (alias runtest) (action (diff halts-2.ml halts-2.gen)))
(rule (alias runtest) (action (diff halts-3.ml halts-3.gen)))

(rule (alias runtest) (action (diff fib-0.ml fib-0.gen)))
(rule (alias runtest) (action (diff fib-1.ml fib-1.gen)))
(rule (alias runtest) (action (diff fib-2.ml fib-2.gen)))
(rule (alias runtest) (action (diff fib-3.ml fib-3.gen)))

(rule (alias runtest) (action (diff shell-0.ml shell-0.gen)))
(rule (alias runtest) (action (diff shell-1.ml shell-1.gen)))
(rule (alias runtest) (action (diff shell-2.ml shell-2.gen)))
(rule (alias runtest) (action (diff shell-3.ml shell-3.gen)))

(rule (alias runtest) (action (diff thrice-0.ml thrice-0.gen)))
(rule (alias runtest) (action (diff thrice-1.ml thrice-1.gen)))
(rule (alias runtest) (action (diff thrice-2.ml thrice-2.gen)))
(rule (alias runtest) (action (diff thrice-3.ml thrice-3.gen)))

(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-0.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -0))))
(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-1.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -1))))
(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-2.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -2))))
(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-3.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -3))))

(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-0.gen (run ../haskell/main.exe ../examples/small.fun -compile -0))))
(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-1.gen (run ../haskell/main.exe ../examples/small.fun -compile -1))))
(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-2.gen (run ../haskell/main.exe ../examples/small.fun -compile -2))))
(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-3.gen (run ../haskell/main.exe ../examples/small.fun -compile -3))))

(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-0.gen (run ../haskell/main.exe ../examples/halts.fun -compile -0))))
(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-1.gen (run ../haskell/main.exe ../examples/halts.fun -compile -1))))
(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-2.gen (run ../haskell/main.exe ../examples/halts.fun -compile -2))))
(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-3.gen (run ../haskell/main.exe ../examples/halts.fun -compile -3))))

(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-0.gen (run ../haskell/main.exe ../examples/fib.fun -compile -0))))
(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-1.gen (run ../haskell/main.exe ../examples/fib.fun -compile -1))))
(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-2.gen (run ../haskell/main.exe ../examples/fib.fun -compile -2))))
(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-3.gen (run ../haskell/main.exe ../examples/fib.fun -compile -3))))

(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-0.gen (run ../haskell/main.exe ../examples/shell.fun -compile -0))))
(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-1.gen (run ../haskell/main.exe ../examples/shell.fun -compile -1))))
(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-2.gen (run ../haskell/main.exe ../examples/shell.fun -compile -2))))
(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-3.gen (run ../haskell/main.exe ../examples/shell.fun -compile -3))))

(rule (deps ../haskell/main.exe ../examples/thrice.fun) (action (with-stdout-to thrice-0.gen (run ../haskell/main.exe ../examples/thrice.fun -compile -0))))
(rule (deps ../haskell/main.exe ../examples/thrice.fun) (action (with-stdout-to thrice-1.gen (run ../haskell/main.exe ../examples/thrice.fun -compile -1))))
(rule (deps ../haskell/main.exe ../examples/thrice.fun) (action (with-stdout-to thrice-2.gen (run ../haskell/main.exe ../examples/thrice.fun -compile -2))))
(rule (deps ../haskell/main.exe ../examples/thrice.fun) (action (with-stdout-to thrice-3.gen (run ../haskell/main.exe ../examples/thrice.fun -compile -3))))

;; un-normalized compilation output 1,2,3

(rule (alias runtest) (action (diff tiny-1u.ml tiny-1u.gen)))
(rule (alias runtest) (action (diff tiny-2u.ml tiny-2u.gen)))
(rule (alias runtest) (action (diff tiny-3u.ml tiny-3u.gen)))

(rule (alias runtest) (action (diff small-1u.ml small-1u.gen)))
(rule (alias runtest) (action (diff small-2u.ml small-2u.gen)))
(rule (alias runtest) (action (diff small-3u.ml small-3u.gen)))

(rule (alias runtest) (action (diff halts-1u.ml halts-1u.gen)))
(rule (alias runtest) (action (diff halts-2u.ml halts-2u.gen)))
(rule (alias runtest) (action (diff halts-3u.ml halts-3u.gen)))

(rule (alias runtest) (action (diff fib-1u.ml fib-1u.gen)))
(rule (alias runtest) (action (diff fib-2u.ml fib-2u.gen)))
(rule (alias runtest) (action (diff fib-3u.ml fib-3u.gen)))

(rule (alias runtest) (action (diff shell-1u.ml shell-1u.gen)))
(rule (alias runtest) (action (diff shell-2u.ml shell-2u.gen)))
(rule (alias runtest) (action (diff shell-3u.ml shell-3u.gen)))

(rule (alias runtest) (action (diff thrice-1u.ml thrice-1u.gen)))
(rule (alias runtest) (action (diff thrice-2u.ml thrice-2u.gen)))
(rule (alias runtest) (action (diff thrice-3u.ml thrice-3u.gen)))

(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-1u.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -1u))))
(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-2u.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -2u))))
(rule (deps ../haskell/main.exe ../examples/tiny.fun) (action (with-stdout-to tiny-3u.gen (run ../haskell/main.exe ../examples/tiny.fun -compile -3u))))

(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-1u.gen (run ../haskell/main.exe ../examples/small.fun -compile -1u))))
(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-2u.gen (run ../haskell/main.exe ../examples/small.fun -compile -2u))))
(rule (deps ../haskell/main.exe ../examples/small.fun) (action (with-stdout-to small-3u.gen (run ../haskell/main.exe ../examples/small.fun -compile -3u))))

(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-1u.gen (run ../haskell/main.exe ../examples/halts.fun -compile -1u))))
(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-2u.gen (run ../haskell/main.exe ../examples/halts.fun -compile -2u))))
(rule (deps ../haskell/main.exe ../examples/halts.fun) (action (with-stdout-to halts-3u.gen (run ../haskell/main.exe ../examples/halts.fun -compile -3u))))

(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-1u.gen (run ../haskell/main.exe ../examples/fib.fun -compile -1u))))
(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-2u.gen (run ../haskell/main.exe ../examples/fib.fun -compile -2u))))
(rule (deps ../haskell/main.exe ../examples/fib.fun) (action (with-stdout-to fib-3u.gen (run ../haskell/main.exe ../examples/fib.fun -compile -3u))))

(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-1u.gen (run ../haskell/main.exe ../examples/shell.fun -compile -1u))))
(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-2u.gen (run ../haskell/main.exe ../examples/shell.fun -compile -2u))))
(rule (deps ../haskell/main.exe ../examples/shell.fun) (action (with-stdout-to shell-3u.gen (run ../haskell/main.exe ../examples/shell.fun -compile -3u))))

(rule (deps ../haskell/main.exe ../examples/thrice.fun) (action (with-stdout-to thrice-1u.gen (run ../haskell/main.exe ../examples/thrice.fun -compile -1u))))
(rule (deps ../haskell/main.exe ../examples/thrice.fun) (action (with-stdout-to thrice-2u.gen (run ../haskell/main.exe ../examples/thrice.fun -compile -2u))))
(rule (deps ../haskell/main.exe ../examples/thrice.fun) (action (with-stdout-to thrice-3u.gen (run ../haskell/main.exe ../examples/thrice.fun -compile -3u))))
