(cram
 (deps
  ../haskell/main.exe

  ../ocaml/bin/fib.exe
  ../ocaml/bin/halts.exe
  ../ocaml/bin/shell.exe
  ../ocaml/bin/small.exe
  ../ocaml/bin/tiny.exe

  ../examples/fib.fun
  ../examples/halts.fun
  ../examples/shell.fun
  ../examples/small.fun
  ../examples/tiny.fun

  halts.input
  shell.input
  small.input
  tiny.input

))
