
;(rule
; (deps ../x86/runtime.asm ../compile-examples/gen/small-5.gen)
; (action
;  (with-stdout-to small.img
;   (run nasm -Werror -o small.img -dCODE='../compile-examples/gen/small-5.gen' ../x86/runtime.asm))))


(subdir generate (executable (name main)))

(rule
 (target dune.inc)
 (deps (glob_files ../examples/*.fun))
 (action (with-stdout-to dune.inc (run generate/main.exe))))

(subdir gen (dynamic_include ../dune.inc))
