
(subdir gen
 (dynamic_include ../dune.inc)
 (library
  (name example_lib)
  (flags (:standard -nostdlib -nopervasives)) ; ensure we are explicit about all primitives
  (libraries prim_lib)))

(rule
 (target dune.inc)
 (deps (glob_files ../../examples/*.fun))
 (action (with-stdout-to dune.inc (run generate/main.exe))))

(subdir generate (executable (name main)))
